# neobridge

./: .gitignore  .pdm-python  Cargo.toml  README.md  neobridge-install.py  pyproject.toml
examples/: __template__.py  filling_animation.py  mouse.py  simple_blinking.py
neobridge/: client.py  command.py  neobridge.py
src/: lib.rs  main.rs
src/neobridge/: client.py  code.py  command.py  neobridge.py
tests/: set_all.py  set_one.py
