[package]
name = "neobridge-rust"
version = "0.1.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/porplax/neobridge/tree/neobridge-rs"
readme = "README.md"
description = "Lets you control neopixels from your PC using a board."
keywords = ["embedded", "neopixels", "api", "serial", "board"]
categories = ["embedded", "multimedia", "hardware-support"]

[dependencies]
serialport = "4.3.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false